<resources>
    <string name="app_name">Flasher</string>
    <string name="study">study</string>
    <string name="next">NEXT</string>
    <string name="learn">LEARN</string>
    <string name="previous">previous</string>
    <string name="show_more"><u>Show more</u></string>
    <string name="show_less"><u>show less</u></string>
    <string name="no_word_found">there is no word found. add with fab button</string>
    <string name="loading">loading...</string>
    <string name="new_collection">Add new Collection</string>
    <string name="collection_name">collection name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="no_input">please input as least one character</string>
    <string name="delete">delete</string>
    <string name="dialog_delete_title">do you want to delete %1$s?</string>
    <string name="words">Words</string>
    <string name="update_database">Update Database</string>
    <string name="backup">Backup</string>
    <string name="restore">RESTORE</string>
    <string name="permission_denied_title">show again?</string>
    <string name="permission_dialog_title">can\'t access to permissions</string>
</resources>
